--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,16 @@
   padding-top: 130px;
   padding-bottom: 70px;
 }
+
+.pageTitle {
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 900;
+  font-size: 2vw;
+  padding: 4px;
+  padding-bottom: 35px;
+  border-radius: 50px;
+  color: rgb(0, 0, 0);
+}
